@@ -7,6 +7,7 @@ Not ready yet:
 [ CORE. Make Zabbix compile by cc ]
 
 [ CORE. Change trigger status in case if host/item status is changed ]
+[ CORE. Get rid of all numerics constants in the code ]
 
 [ PHP. Show triggers by userid ]
 
@@ -14,8 +15,14 @@ Not ready yet:
 
 [ HB. Authorisation without user name/password ]
 [ HB. zabbix_suckerd core dumps occasionally ]
+[ HB. SNMP code core dumps occasionally ]
+
+[ DOCS. SNMP with missing MIB files can be used by:
+snmpget -On localhost public enterprises.ucdavis.memory.memTotalSwap.0]
 
 Changes for 1.0beta4:
+
+ - fixed double posting of the same trigger status into alarms (Alexei) 
 
  - fixed macros substitution in email alerts (Alexei)
  - removed option -Wall from all Makefiles (Alexei)
